# c_ai

./: .gitignore  .gitmodules  CMakeLists.txt
inc/: GradientMap.h  MNIST.h  Network.h  ProjectForwards.h  Training.h  UtilAi.h  ai.h
release/: CMakeCache.txt  Makefile  clear.nn  cmake_install.cmake  compile_commands.json  proj
release/modules/c_dynamic_string/: Makefile  cmake_install.cmake
src/: GradientMap.c  MNIST.c  Network.c  Training.c  UtilAi.c  ai.c  main.c  xor.c
test/inc/: global_params.h  xor.h
test/src/: main.c
